# html5ever

./: Cargo.toml
html5ever/: Cargo.toml
html5ever/benches/: html5ever.rs
html5ever/examples/: arena.rs
html5ever/fuzz/: Cargo.toml
html5ever/src/: driver.rs  lib.rs
html5ever/src/tokenizer/: interface.rs  mod.rs
html5ever/src/tree_builder/: mod.rs  rules.rs  types.rs
markup5ever/: Cargo.toml  lib.rs
markup5ever/interface/: mod.rs
match_token/: Cargo.toml
match_token/src/: lib.rs
rcdom/: Cargo.toml  lib.rs
rcdom/tests/: html-serializer.rs  html-tokenizer.rs  html-tree-builder.rs  html-tree-sink.rs  xml-tokenizer.rs  xml-tree-builder.rs
rcdom/tests/foreach_html5lib_test/: mod.rs
web_atoms/: Cargo.toml  all_entities.rs  build.rs  generate_entity_list  generate_entity_list.rs  lib.rs
xml5ever/: Cargo.toml
xml5ever/fuzz/: Cargo.toml
xml5ever/src/: driver.rs
xml5ever/src/serialize/: mod.rs
xml5ever/src/tokenizer/: mod.rs
xml5ever/src/tree_builder/: mod.rs
