[[bench]]
name = "html5ever"
harness = false

[package]
name = "html5ever"
description = "High-performance browser-grade HTML5 parser"
documentation = "https://docs.rs/html5ever"
categories = [ "parser-implementations", "web-programming",]
keywords = [ "html", "html5", "parser", "parsing",]
readme = "../README.md"
version = "0.35.0"
license = "MIT OR Apache-2.0"
authors = [ "html5ever project",]
repository = "https://github.com/servo/html5ever"
edition = "2024"
rust-version = "1.85.0"

[features]
trace_tokenizer = []

[dependencies]
match_token = { git = "https://github.com/cyrup-ai/html5ever" }
log = "0.4.29"

[dev-dependencies]
criterion = "0.7.0"
typed-arena = "2.0.2"

[dependencies.markup5ever]
git = "https://github.com/cyrup-ai/html5ever"
version = "0.35.0"
