[[test]]
name = "html-tokenizer"
harness = false

[[test]]
name = "html-tree-builder"
harness = false

[[test]]
name = "xml-tree-builder"
harness = false

[[test]]
name = "xml-tokenizer"
harness = false

[package]
name = "markup5ever_rcdom"
description = "Basic, unsupported DOM structure for use by tests in html5ever/xml5ever"
readme = "README.md"
documentation = "https://docs.rs/markup5ever_rcdom"
categories = [ "parser-implementations", "web-programming",]
version = "0.35.0+unofficial"
license = "MIT OR Apache-2.0"
authors = [ "html5ever project",]
repository = "https://github.com/servo/html5ever"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
path = "lib.rs"

[dependencies]
tendril = "0.4.3"

[dev-dependencies]
libtest-mimic = "0.8.1"
serde_json = "1.0.145"
env_logger = "0.11.8"

[dependencies.html5ever]
path = "../html5ever"

[dependencies.markup5ever]
path = "../markup5ever"
version = "0.35.0"

[dependencies.xml5ever]
path = "../xml5ever"

[dependencies.zeroshot-workspace-hack]
version = "0.1"
path = "../../../workspace-hack"
