[package]
name = "web_atoms"
version = "0.1.3"
authors = ["html5ever project"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/html5ever"
description = "Atoms for xml5ever and html5ever"
documentation = "https://docs.rs/web_atoms"
build = "build.rs"
categories = ["web-programming"]
edition = "2024"
rust-version = "1.85.0"

[lib]
path = "lib.rs"

[dependencies]
string_cache = "0.9.0"
phf = "0.13.1"
zeroshot-workspace-hack = { version = "0.1", path = "../../../workspace-hack" }

[build-dependencies]
string_cache_codegen = "0.6.1"
phf_codegen = "0.13.1"
