[[bin]]
name = "fuzz_document_parse"
path = "fuzz_targets/fuzz_document_parse.rs"

[package]
name = "html5ever-fuzz"
version = "0.0.0"
authors = [ "David Korczynski <david@adalogics.com>",]
publish = false
edition = "2018"

[dependencies]
libfuzzer-sys = "0.4.10"

[workspace]
members = [ ".",]

[package.metadata]
cargo-fuzz = true

[dependencies.html5ever]
path = ".."

[dependencies.markup5ever_rcdom]
path = "../../rcdom/"
